Updated styling, squashed bugs, added resume link

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,6 +9,7 @@ $black: #000;
 $color_desert_storm_approx: #f8f8f8;
 $color_havelock_blue_approx: #4a89dc; //urls
 $blue-gradient: linear-gradient(45deg, #24C6DC, #514A9D);
+$light-grey: #b3b3b3;
 $grey: #505a67;
 $skyline: url("https://firebasestorage.googleapis.com/v0/b/portfolio-e50c1.appspot.com/o/main-background.jpg?alt=media&token=b5196c7f-2f3c-4dfc-81c5-b0093aeb8586");
 $lato: 'Lato', sans-serif;
@@ -70,6 +71,35 @@ html {
       color: $grey;
     }
 
+    .line-button {
+      text-align: center;
+      transition: color 0.3s linear;
+      color     : $black;
+
+      &::after {
+        transition: width 0.3s linear 0.3s, height 0.3s linear, margin-top 0.3s linear;
+        content   : '';
+        display   : block;
+        height    : 1px;
+        width     : 40%;
+        background: $black;
+        margin    : 5px auto;
+      }
+
+      &:hover {
+        transition     : color 0.5s linear 0.3s;
+        text-decoration: none;
+        color          : $light-grey;
+
+        &::after {
+          transition: width 0.3s linear, height 0.5s linear 0.3s, margin-top 0.5s linear 0.3s;
+          margin-top: -34px;
+          height    : 40px;
+          width     : 100%;
+        }
+      }
+    }
+
     ::selection {
       background: $black;
       color     : #bbbbbb;
@@ -104,7 +134,6 @@ html {
 
           p {
             font-family: $lato;
-            word-break : break-all;
           }
         }
       }
